@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-24T02:26:05Z",
+  "timestamp" : "2022-08-24T08:29:07Z",
   "count_outdated" : 751,
   "uniques_outdated" : 392,
-  "count" : 763,
-  "uniques" : 399,
+  "count" : 764,
+  "uniques" : 400,
   "clones" : [
     {
       "timestamp": "2022-08-13T00:00:00Z",
@@ -44,6 +44,13 @@
       "timestamp": "2022-08-23T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
