@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 4,
   "clones": [
     {
@@ -30,6 +30,11 @@
     {
       "timestamp": "2022-08-23T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
